--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="portfolio__div">
                     <div class="portfolio__description"><div>Веб-приложение</div></div>
                     <a href="/krjk" class="portfolio__item_krjk"><img src="img/works/logo-kgkr.png" alt="uber"></a>
-                    <div class="title title_fz16 portfolio_text">Выполняет функцию регистрации заданий для контроллеров, после чего ими осуществляется обход точек, которые показываются в стороннем мобильном приложении, исходники на гитхабе</div>
+                    <div class="title title_fz16 portfolio_text">Выполняет функцию регистрации заданий для контроллеров, после чего ими осуществляется обход точек, которые показываются в стороннем мобильном приложении, делалась десктоп версия, исходники и backend на гитхабе</div>
 
                 </div>
 
