--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
             <div class="portfolio__landing-page"><div>landing page</div></div>
             <div class="portfolio__wrapper_landings">
                 <a href="/maket2" class="portfolio__item"><img src="img/works/uber.jpg" alt="uber"></a>
-                <a href="/maket3" class="portfolio__item"><img src="img/works/pulse.jpg" alt="pulse"></a>   
+                <a href="/maket3" class="portfolio__item"><img src="img/works/pulse.jpg" alt="pulse"></a>
+                <a href="/maket4" class="portfolio__item"><img src="img/works/preview-300x300.jpg" alt="clinic"></a> 
             </div>
 
             
