--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div class="portfolio__div">
                     <div class="portfolio__description"><div>Журнал вызовов</div></div>
                     
-                    <a href="https://freerade.ru/index.php" class="portfolio__item"><img src="img/works/Screenshot_9.jpg" alt="calllog"></a>
+                    <a href="http://n91803xk.beget.tech/" class="portfolio__item"><img src="img/works/Screenshot_9.jpg" alt="calllog"></a>
 
                     <div class="title title_fz16 portfolio_text">Журнал вызовов, сделан на php</div>
         
