--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                                 </div>
 
                                 <div class="resume__item-body">
-                                    Создание комплекса приложений для Сочинского АО «Крайжилкомресурс», Back-end часть для приложения по учету и контролю финансовых пуступлений в рамках работы с ООО "ИНТОП".
+                                    Имеют опыт интеграций сайтов с amocrm, создание виджетов и чат-ботов для тг. Делал комплекс приложений для Сочинского АО «Крайжилкомресурс», Back-end часть для приложения по учету и контролю финансовых пуступлений в рамках работы с ООО "ИНТОП".
+                                  
                                 </div>
                             </div>
                         </li>
